test/invalid-syntax/59843_fun_arrow_missing/fun_arrow_missing.mag
-- Author: 59843, Miguel Castelo

-- The function type must include the '->' arrow

fun double (n) : Int Int = n * 2

fun main (_) : Unit -> Unit = print(double(5))